--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pipin",
   "version": "1.0.0",
   "description": "Print out Raspberry Pi pins",
+  "bin": {
+    "pipin": "./app.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
