--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pipin",
   "version": "1.1.1",
-  "description": "Print out Raspberry Pi pins",
+  "description": "Set and read Raspberry Pi GPIO pins, and display pin schematics",
   "bin": {
     "pipin": "./app.js"
   },
@@ -15,6 +15,13 @@
     "url": "git+https://github.com/tstringer/pipin.git"
   },
   "license": "ISC",
+  "keywords": [
+    "raspberry-pi",
+    "raspberrypi",
+    "raspberry pi",
+    "iot",
+    "gpio"
+  ],
   "dependencies": {
     "commander": "^2.9.0",
     "gulp": "^3.9.1",
