--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gpio"
   ],
   "dependencies": {
+    "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "gulp": "^3.9.1",
     "prompt": "^1.0.0",
