--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.2.1",
   "description": "Set and read Raspberry Pi GPIO pins, and display pin schematics",
   "bin": {
-    "pipin": "./app.js"
+    "pipin": "./pipin"
   },
-  "main": "index.js",
+  "main": "pipin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
